# aprendendo-flask

./: hello.py  pyproject.toml
flaskr/: __init__.py  auth.py  db.py  schema.sql  task.py
flaskr/static/: style.css
flaskr/templates/: base.html  index.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/task/: create.html  index.html  update.html
static/: style.css
templates/: hello.html
tests/: data.sql  test_auth.py  test_db.py  test_factory.py  test_task.py
