[project]
name = "flaskr"
version = "1.0.0"
description = "Um aplicativo básico de tarefas que foi construído usando o tutorial do Flask"
dependecies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]